further trials on authorization